# cargo-api

./: Cargo.toml  README.md  readme.md
src/: api.rs  client.rs  lib.rs  types.rs
src/api/: crates.rs
src/api/crates/: crate_.rs
src/client/: reqwest.rs
